tests/negative/gold/postfix-test.gold
tests/negative/postfix-test.toit:6:3: error: Can't assign to unknown 'unresolved'
  unresolved++
  ^~~~~~~~~~
tests/negative/postfix-test.toit:7:3: error: Can't assign to unknown 'unresolved'
  unresolved++
  ^~~~~~~~~~
Compilation failed
